<resources>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_title">AC Infinity</string>
    <string name="account_title">ACCOUNT</string>
    <string name="adv_time_conflict">Time conflict. Make sure that the time is not in the time interval of automation that has been opened.</string>
    <string name="alarm_default_name">Alarms</string>
    <string name="alarm_info_all_mode">The controller and mobile device will make audible beeps anytime Modes set the device to on or off.</string>
    <string name="alarm_info_auto">The device will make an audible beep anytime that Auto Mode sets the device to on or off.</string>
    <string name="alarm_info_cycle">The device will make an audible beep anytime that Cycle Mode sets the device to on or off.</string>
    <string name="alarm_info_hum_parameter">The controller and mobile device will make audible beeps at custom humidity points.</string>
    <string name="alarm_info_schedule">The device will make an audible beep anytime that Schedule Mode sets the device to on or off.</string>
    <string name="alarm_info_temp_hum">The device will make a continuous audible beep at custom temperature and humidity points.</string>
    <string name="alarm_info_temp_parameter">The controller and mobile device will make audible beeps at custom temperature points.</string>
    <string name="alarm_info_time_off">The device will make an audible beep anytime that Timer To Off Mode sets the device to on or off.</string>
    <string name="alarm_info_time_on">The device will make an audible beep anytime that Timer To On Mode sets the device to on or off.</string>
    <string name="alarm_info_vpd_mode">The device will make an audible beep anytime that VPD Mode sets the device to on or off.</string>
    <string name="alarm_info_vpd_parameter">The controller and mobile device will make audible beeps at custom VPD points.</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_des">Set conditions in which an audible alarm would occur on the device. These parameters can be a custom temperature or humidity point, or when device programs activate.</string>
    <string name="album_name_all">All Media</string>
    <string name="app_name">AC Infinity</string>
    <string name="app_update_title">APP UPDATE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_info_cycle">During the scheduled time, device will follow a timed on and off cycle.</string>
    <string name="auto_info_hum">During the scheduled time, device will trigger on and off based on custom humidity points.</string>
    <string name="auto_info_off">During the scheduled time, device will be off.</string>
    <string name="auto_info_on">During the scheduled time, device will be on.</string>
    <string name="auto_info_temp">During the scheduled time, device will trigger on and off based on custom temperature points.</string>
    <string name="auto_info_temp_hum">During the scheduled time, device will trigger on and off based on custom temperature and humidity points.</string>
    <string name="auto_info_temp_parameter">During the scheduled time, device will trigger on and off based on custom temperature points.</string>
    <string name="auto_info_vpd">During the scheduled time, device will trigger on and off based on custom vpd points.</string>
    <string name="automations">Automations</string>
    <string name="automations_des">Set a specific time of day to start and end, in which the device can be programmed to be on, off, follow a timed cycle, or a set of temperature and humidity parameters.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_try_again">TRY AGAIN</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="change_mode_success">Change Mode Success</string>
    <string name="change_password_title">CHANGE PASSWORD</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="control_automation_activated_alarm">Controls are disabled while an Advance Automation is active.</string>
    <string name="control_title_high_humidity_alarm">High Humidity Alarm</string>
    <string name="control_title_high_temperature_alarm">High Temperature Alarm</string>
    <string name="control_title_low_humidity_alarm">Low Humidity Alarm</string>
    <string name="control_title_low_temperature_alarm">Low Temperature Alarm</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_title">CREATE ACCOUNT</string>
    <string name="create_tips">By creating an account, you are agree to AC Infinity’s</string>
    <string name="customactivityoncrash_error_activity_close_app">Exit</string>
    <string name="customactivityoncrash_error_activity_error_details">Error Log</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied Log</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy Log</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error Details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart</string>
    <string name="device_detail_title">DEVICE DETAIL</string>
    <string name="device_title">ADD DEVICE</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="empty_text">No media yet</string>
    <string name="err_config_net_content">Please reconnect with your 2.4 GHz network or re-enter your password.</string>
    <string name="err_config_net_title">Failed to Connect</string>
    <string name="err_connect_fail">(%1$s) IS ALREADY PAIRED</string>
    <string name="err_database">App error. In order to ensure normal business, it is recommended to uninstall and reinstall.</string>
    <string name="err_no_scanned_device">FAILED TO CONNECT OR LOCATE</string>
    <string name="err_not_enable_blue">Bluetooth is required to pair smart device. Enable Bluetooth and try again.</string>
    <string name="err_not_enable_wifi">Wi-Fi is required to pair smart device. Enable Wi-Fi and try again.</string>
    <string name="err_scan_record_parse">scan record parse failed</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="firmware_update_title">FIRMWARE UPDATE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="invite_guest_title">INVITE GUEST</string>
    <string name="invite_send">SEND</string>
    <string name="invite_tip_content">Enter a registered AC Infinity Email</string>
    <string name="log_in">LOG IN</string>
    <string name="reset_password_title">RESET PASSWORD</string>
    <string name="tip_do_not_exit">Don’t Exit</string>
    <string name="tip_exit">Exit</string>
    <string name="tip_exit_add_device">Exit Add Device?</string>
    <string name="tip_exit_add_device_desc">Your device will not be connected.</string>
    <string name="update_title">UPDATE</string>
</resources>