<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:tag="layout/activity_version_0" android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/toolBar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.eternal.widget.guqiang.Toolbar android:tag="binding_1" android:background="@color/nav_tab" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height" app:backRes="@drawable/add_device_back_selector" app:title="@string/app_update_title" />
        <com.eternal.widget.guqiang.ProgressToolbar android:tag="binding_2" android:background="@color/nav_tab" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" app:backRes="@drawable/add_device_back_selector" app:title="@string/firmware_update_title" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_50" android:layout_below="@id/toolBar">
        <TextView android:textSize="@dimen/dp_15" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/tv_tip" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/avenir_heavy" />
        <TextView android:textSize="@dimen/dp_14" android:textColor="@color/color_F1F1F1" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_26" android:fontFamily="@font/avenir_book" />
    </LinearLayout>
    <TextView android:textSize="@dimen/dp_14" android:textColor="@color/color_F1F1F1" android:gravity="center_horizontal" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_149" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="@font/avenir_book" />
    <Button android:textSize="@dimen/dp_14" android:textColor="@color/white" android:id="@id/ib_next" android:tag="binding_6" android:background="@drawable/create_account_gradient" android:layout_width="fill_parent" android:layout_height="@dimen/dp_55" android:text="@string/update_title" android:layout_alignParentBottom="true" android:fontFamily="@font/avenir_heavy" android:stateListAnimator="@null" />
    <TextView android:textSize="@dimen/dp_11" android:textColor="@color/white" android:gravity="center" android:id="@id/txt_connect_time" android:tag="binding_7" android:background="@color/color_FF6A6A" android:layout_width="fill_parent" android:layout_height="@dimen/dp_25" android:layout_below="@id/toolBar" android:fontFamily="@font/avenir_medium" app:layout_constraintTop_toBottomOf="@id/toolBar" />
</RelativeLayout>