<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:tag="layout/activity_login_0" android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.eternal.widget.guqiang.Toolbar android:id="@id/toolBar" android:tag="binding_1" android:background="@color/nav_tab" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height" />
    <TextView android:textSize="@dimen/dp_18" android:textColor="@color/white" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_22" android:text="Welcome to AC Infinity" android:layout_below="@id/toolBar" android:layout_centerHorizontal="true" android:fontFamily="@font/avenir_medium" />
    <RelativeLayout android:id="@id/create_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_41" android:layout_below="@id/toolBar">
        <TextView android:textSize="@dimen/dp_15" android:id="@id/create_email_title" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_account_email" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_23" />
        <EditText android:textSize="@dimen/dp_16" android:gravity="center_vertical" android:id="@id/et_email" android:tag="binding_4" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:layout_below="@id/create_email_title" android:inputType="textEmailAddress" android:textCursorDrawable="@drawable/edit_text_bg" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_22" />
        <View android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" android:layout_alignBottom="@id/et_email" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" />
        <TextView android:textSize="@dimen/dp_12" android:textColor="@color/color_FF6A6A" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/et_email" android:fontFamily="@font/avenir_book" android:layout_alignStart="@id/et_email" android:layout_alignEnd="@id/et_email" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/create_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_15" android:layout_below="@id/create_email">
        <TextView android:textSize="@dimen/dp_15" android:id="@id/create_password_title" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_account_password" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_23" />
        <EditText android:textSize="@dimen/dp_16" android:gravity="center_vertical" android:id="@id/et_pwd" android:tag="binding_8" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:maxLength="25" android:layout_below="@id/create_password_title" android:inputType="textPassword" android:textCursorDrawable="@drawable/edit_text_bg" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_22" android:layout_marginEnd="@dimen/dp_60" />
        <TextView android:textSize="@dimen/dp_12" android:textColor="@color/color_838383" android:gravity="center" android:tag="binding_9" android:background="@color/color_transparency" android:layout_width="wrap_content" android:layout_height="@dimen/dp_56" android:layout_alignTop="@id/et_pwd" android:layout_alignBottom="@id/et_pwd" android:fontFamily="@font/avenir_heavy" android:paddingStart="@dimen/dp_22" android:paddingEnd="@dimen/dp_22" android:layout_alignParentEnd="true" />
        <View android:tag="binding_10" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" android:layout_alignBottom="@id/et_pwd" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" />
        <TextView android:textSize="@dimen/dp_12" android:textColor="@color/color_FF6A6A" android:tag="binding_11" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/et_pwd" android:fontFamily="@font/avenir_book" android:layout_marginEnd="@dimen/dp_16" android:layout_alignStart="@id/et_pwd" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/color_15BAFF" android:id="@id/tv_forgot" android:tag="binding_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/forgot_password" android:layout_below="@id/create_password" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_16" />
    <TextView android:textSize="@dimen/dp_15" android:textColor="@color/white" android:id="@id/tv_new" android:tag="binding_13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_40" android:text="New User?" android:layout_below="@id/tv_forgot" android:fontFamily="@font/avenir_heavy" android:layout_marginStart="@dimen/dp_16" />
    <TextView android:textSize="@dimen/dp_15" android:textColor="@color/color_15BAFF" android:tag="binding_14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_40" android:text="@string/create_account_title" android:layout_below="@id/tv_forgot" android:fontFamily="@font/avenir_heavy" android:layout_toEndOf="@id/tv_new" />
    <Button android:textSize="@dimen/dp_14" android:id="@id/ib_next" android:tag="binding_15" android:layout_width="fill_parent" android:layout_height="@dimen/dp_55" android:text="@string/log_in" android:layout_alignParentBottom="true" android:fontFamily="@font/avenir_heavy" android:stateListAnimator="@null" />
    <ProgressBar android:id="@id/pb_loading" android:tag="binding_16" android:layout_width="@dimen/dp_38" android:layout_height="@dimen/dp_38" android:layout_marginBottom="@dimen/dp_7" android:indeterminateDrawable="@drawable/progress_anim" android:indeterminateBehavior="repeat" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?android:progressBarStyle" />
</RelativeLayout>