<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:tag="layout/activity_invite_0" android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.eternal.widget.guqiang.ProgressToolbar android:id="@id/toolBar" android:tag="binding_1" android:background="@color/nav_tab" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" app:backRes="@drawable/add_device_back_selector" app:singleTitle="true" app:title="@string/invite_guest_title" />
    <RelativeLayout android:id="@id/create_email" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dp_15" android:textColor="@color/white" android:id="@id/create_email_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_27" android:text="@string/invite_tip_content" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_23" />
        <EditText android:textSize="@dimen/dp_16" android:gravity="center_vertical" android:id="@id/et_email" android:tag="binding_2" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:layout_below="@id/create_email_title" android:inputType="textEmailAddress" android:textCursorDrawable="@drawable/edit_text_bg" android:fontFamily="@font/avenir_book" android:layout_marginStart="@dimen/dp_22" />
        <View android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" android:layout_alignBottom="@id/et_email" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" />
        <TextView android:textSize="@dimen/dp_12" android:textColor="@color/color_FF6A6A" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/et_email" android:fontFamily="@font/avenir_book" android:layout_alignStart="@id/et_email" android:layout_alignEnd="@id/et_email" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/dp_15" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_55" android:text="SELECT YOUR Wi-Fi DEVICE" android:fontFamily="@font/avenir_heavy" />
    <com.eternal.base.SlideRecyclerView android:tag="binding_5" android:paddingBottom="@dimen/dp_60" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/dp_57" android:layout_weight="1.0" android:overScrollMode="never" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/dp_55">
        <Button android:textSize="@dimen/dp_14" android:id="@id/ib_next" android:tag="binding_6" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/invite_send" android:fontFamily="@font/avenir_heavy" android:stateListAnimator="@null" />
        <ProgressBar android:id="@id/pb_loading" android:tag="binding_7" android:layout_width="@dimen/dp_38" android:layout_height="@dimen/dp_38" android:layout_marginBottom="@dimen/dp_7" android:indeterminateDrawable="@drawable/progress_anim" android:indeterminateBehavior="repeat" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?android:progressBarStyle" />
    </RelativeLayout>
</LinearLayout>